--- a/Day 6/MyResume.html
+++ b/Day 6/MyResume.html
@@ -13,24 +13,22 @@
 
         <div class="left-section">
             <div class="profile">
-                <img src="image/IMG_20230303_194218_929.jpg" class="profile-img">
+                <img src="" class="profile-img">
                 <div class="blue-box"></div>
             </div>
-            <h2 class="name">SWETNEEL <br><span>SHELADIYA</span></h2>
-            <p class="n-p">Python Developer</p>
+            <h2 class="name">Neha <br><span>Vaghela</span></h2>
+            <p class="n-p">Front Developer</p>
 
 
             <div class="info">
                 <p class="heading">Info</p>
-                <p class="p1"><span class="span1"><img src="image/images (1).png"></span>Address<span>
-                        <br>A-203,Vallabh
-                        Shrushti Apartment,G.I.D.C
-                        Ankleshwar</span></p>
+                <p class="p1"><span class="span1"><img src=""></span>Address<span>
+                        <br>Ahemdab,Gujrat,India</span></p>
                 <p class="p1"><span class="span1"><img src="image/5304.png_300.png"></span>Phone<span>
-                        <br>+918799128441</span>
+                        <br>+91xxx5443</span>
                 </p>
-                <p class="p1"><span class="span1"><img src="image/281769.png"></span>Email<span>
-                        <br>sheladiyaswetneel482gmail.com</span>
+                <p class="p1"><span class="span1"><img src=""></span>Email<span>
+                        <br>nehavaghela1221@gmail.com</span>
                 </p>
             </div>
 
@@ -38,14 +36,14 @@
                 <p class="heading">Social</p>
                 <p class="p1"><span class="span1"><img
                             src="image/8dda07a9847930226a1c217e6b3f3cb6.jpg"></span>Instagram<span>
-                        <br>i_m_swetneel_sheladiya</span></p>
+                        <br>neha2112_</span></p>
                 <p class="p1"><span class="span1"><img src="image/25231.png"></span>Github<span>
-                        <br>Swetneel-Sheladiya</span></p>
+                        <br>Nehavaghela1221</span></p>
                 <p class="p1"><span class="span1"><img src="image/174857.png"></span>Linkdin<span>
-                        <br>Swetneel Sheladiya</span></p>
+                        <br>Neha Vaghela</span></p>
                 <p class="p1"><span class="span1"><img
                             src="image/png-clipart-snapchat-logo-social-media-kik-messenger-advertising-snapchat-text-publishing.png"></span>Snapchat<span>
-                        <br>swetneel284</span></p>
+                        <br>nehq_vaghela</span></p>
             </div>
 
         </div>
