--- a/Day 6/New.html
+++ b/Day 6/New.html
@@ -15,7 +15,7 @@
         <div class="left-box">
             <br><br>
             <div class="profile">
-                <img src="image/IMG_20230303_194218_929.jpg">
+                <img src="">
             </div>
             <div class="content-box">
                 <h2>Profile Info</h2>
@@ -102,8 +102,8 @@
 
         <div class="right-box">
             <h1>
-                Swetneel<br>
-                <span>Sheladiya</span>
+                Neha<br>
+                <span>Vaghela</span>
             </h1>
             <p class="p3">UI & UX DESIGNER</p>
 
